# monitor-tgbot

./: .gitignore  BotConfig.cpp  BotConfig.hpp  BotDatabase.hpp  CMakeLists.txt  LICENSE  PasswordHash.hpp  README.md  main.cpp  monitorbot_config.lua
.ipynb_checkpoints/: BotConfig-checkpoint.cpp
